<resources>
	<string name="app_name" translatable="false">medriver</string>
	<string-array name="languages">
		<item>Українська</item>
		<item>Русский</item>
		<item>English</item>
	</string-array>
	<string-array name="maintenance_dialog_filter_node_list">
		<item>@string/maintenance_parent_node_engine</item>
		<item>@string/maintenance_parent_node_transmission</item>
		<item>@string/maintenance_parent_node_electrics</item>
		<item>@string/maintenance_parent_node_suspension</item>
		<item>@string/maintenance_parent_node_brakes</item>
		<item>@string/maintenance_parent_node_body</item>
		<item>@string/maintenance_parent_node_other</item>
		<item>@string/maintenance_parent_node_planned</item>
		<item>@string/maintenance_dialog_filter_node_no_filter_item</item>
	</string-array>
	<string name="btn_fuel_type_gas">GAS</string>
	<string name="btn_fuel_type_dt">DF</string>
	<string name="btn_fuel_type_92" translatable="false">92</string>
	<string name="btn_fuel_type_95" translatable="false">95</string>
	<string name="btn_fuel_type_95plus" translatable="false">95+</string>
	<string name="btn_fuel_type_98" translatable="false">98</string>
	<string name="btn_fuel_type_100" translatable="false">100</string>
	<string name="price_formatter_left" translatable="false">₴%s</string>
	<string name="price_formatter_right" translatable="false">%s ₴</string>
	<string name="two_strings_whitespace_formatter" translatable="false">%1$s %2$s</string>
	<string name="default_FuelStation" translatable="false">StationDef</string>
	<string name="default_OdometerValue" translatable="false">000000</string>
	<string name="default_date" translatable="false">01.01.1970</string>
	<string name="default_price_unavailable" translatable="false">₴--.--</string>
	<string name="default_error" translatable="false">Unknown error</string>
	<string name="default_vin" translatable="false">00000000000000000</string>
	<string name="hryvnia_symbol" translatable="false">₴</string>
	<string name="notification_channel_consumable_replace_id" translatable="false">consumable_replacement</string>
	<string name="notification_channel_consumable_replace_name">Consumable replacement</string>
	<string name="notification_channel_consumable_replace_description">Remind about consumable replacement</string>
	<string name="notification_consumable_replace_title">It\'s time to visit the service station</string>
	<string name="notification_consumable_replace_text">The lifetime for component \'<b>%1$s</b>\' is about to end</string>
	<string name="bottom_nav_garage">Garage</string>
	<string name="bottom_nav_maintenance">Service</string>
	<string name="bottom_nav_vehicle">Vehicle</string>
	<string name="bottom_nav_fuel">Fuel</string>
	<string name="bottom_nav_settings">Settings</string>
	<string name="liters">L</string>
	<string name="kilometers">km</string>
	<string name="miles">mi</string>
	<string name="formatter_odometer_km">%s km</string>
	<string name="formatter_odometer_mi">%s miles</string>
	<string name="btn_cancel">Cancel</string>
	<string name="btn_add">Add</string>
	<string name="odometer_input_error">Wrong odometer value</string>
	<string name="odometer_input_hint">Odometer</string>
	<string name="commentary_input_hint">Comment (optional)</string>
	<string name="price_input_hint">Price</string>
	<string name="input_empty_error">Empty field</string>
	<string name="never">Never</string>
	<string name="not_found">Not found</string>
	<string name="undefined">Undefined</string>
	<string name="unknown">Unknown</string>
	<string name="dialog_btn_apply">Apply</string>
	<string name="dialog_btn_cancel">Cancel</string>
	<string name="formatter_1_year">%s year</string>
	<string name="formatter_2_to_4_year">%s years</string>
	<string name="formatter_other_years">%s years</string>
	<string name="not_enough_data">Not enough data to display</string>
	<string name="btm_sheet_subscription_choose_plan_label">Choose your plan</string>
	<string name="btm_sheet_subscription_plan_type_free">Free</string>
	<string name="btm_sheet_subscription_plan_type_premium">Premium</string>
	<string name="btm_sheet_subscription_plan_type_pro">PRO</string>
	<string name="btm_sheet_subscription_choose_plan">Choose</string>
	<string name="btm_sheet_subscription_already_chosen_plan">Current</string>
	<string name="btm_sheet_subscription_feature1">Notifications about coming maintenance</string>
	<string name="btm_sheet_subscription_feature2">Unlimited vehicles</string>
	<string name="btm_sheet_subscription_feature3">More useful stats</string>
	<string name="btm_sheet_subscription_feature4">Multiple devices support</string>
	<string name="btm_sheet_subscription_feature5">Data backup</string>
	<string name="btm_sheet_premium_feature_sync_title">Backup</string>
	<string name="btm_sheet_premium_feature_sync_subtitle">Backup all of your history and expenses</string>
	<string name="btm_sheet_premium_feature_multiple_vehicles_title">Multiple vehicles</string>
	<string name="btm_sheet_premium_feature_multiple_vehicles_subtitle">Keep records for multiple vehicles</string>
	<string name="btm_sheet_premium_feature_multiple_devices_title">Sync</string>
	<string name="btm_sheet_premium_feature_multiple_devices_subtitle">Sync and access your data across any device</string>
	<string name="btm_sheet_subscription_plan_duration">/Yearly</string>
	<string name="btm_sheet_subscription_policy">Hey, by purchasing subscription, you agree with our Terms of Service. We will charge you at start of each subscription period until you cancel your subscription. You may cancel it anytime.</string>
	<string name="fg_home_my_garage_header">My garage</string>
	<string name="fg_home_empty_garage_title">Your garage is empty :(</string>
	<string name="fg_home_empty_garage_subtitle">Go to \'My vehicle\' tab to add some new vehicles!</string>
	<string name="fg_home_pie_chart_expenses_description">Overall expenses</string>
	<string name="fg_home_dialog_pie_chart_expenses_settings_title">Choose up to 5 vehicles to show</string>
	<string name="fg_home_bar_char_expenses_title">Expenses for %d</string>
	<string name="garage_odometer_formatter">Mileage: %s</string>
	<string name="garage_last_refill_formatter">Last refueling: %s</string>
	<string name="fg_maintenance_search_hint">Search (pads, camshaft etc)</string>
	<string name="fg_maintenance_history_empty_hint_title">There is nothing to display :(</string>
	<string name="fg_maintenance_history_empty_hint_subtitle">Tap \'+\' button to add new records</string>
	<string name="maintenance_dialog_filter_node_no_filter_item">All</string>
	<string name="maintenance_dialog_filter_title">Choose vehicle system node</string>
	<string name="maintenance_dialog_filter_message">Filters parts by selected node</string>
	<string name="btm_sheet_maintenance_btn_multi_select_choose">Choose</string>
	<string name="btm_sheet_maintenance_btn_multi_select_clear">Clear</string>
	<string name="btm_sheet_maintenance_btn_multi_select_error">Choose at least 1 component</string>
	<string name="btm_sheet_maintenance_btn_add">Add all</string>
	<string name="maintenance_parent_node_engine">Engine</string>
	<string name="maintenance_parent_node_transmission">Transmission</string>
	<string name="maintenance_parent_node_electrics">Electrics</string>
	<string name="maintenance_parent_node_suspension">Suspension</string>
	<string name="maintenance_parent_node_brakes">Brakes</string>
	<string name="maintenance_parent_node_body">Body</string>
	<string name="maintenance_parent_node_other">Other</string>
	<string name="maintenance_parent_node_planned">Planned</string>
	<string name="maintenance_parent_node_engine_components">&#8226; Cylinder head\n&#8226; Mount\n&#8226; Corrugation\n&#8226; Fuel system\n…</string>
	<string name="maintenance_parent_node_transmission_components">&#8226; Speed sensor\n&#8226; Clutch\n&#8226; Semiaxis\n&#8226; CV joints\n…</string>
	<string name="maintenance_parent_node_electrics_components">&#8226; Battery\n&#8226; Generator\n&#8226; Starter\n&#8226; Coils\n…</string>
	<string name="maintenance_parent_node_suspension_components">&#8226; Damping\n&#8226; Spring\n&#8226; Wheel hub\n&#8226; Sleeve, arms\n…</string>
	<string name="maintenance_parent_node_brakes_components">&#8226; Pads, discs, drums\n&#8226; Caliper\n&#8226; Sensors\n&#8226; Parking cable\n…</string>
	<string name="maintenance_parent_node_vehicle_body_components">&#8226; Wipers\n&#8226; Lights\n&#8226; Windshields\n&#8226; Bumpers, fenders\n…</string>
	<string name="maintenance_parent_node_other_components">Not sure what category the replaced part belongs to?</string>
	<string name="maintenance_parent_node_planned_components">&#8226; Oil, filters\n&#8226; Timing kit\n&#8226; Fluids\n&#8226; Plugs (spark, glow)</string>
	<string name="maintenance_other_component">Other</string>
	<string name="maintenance_engine_antifreeze">Antifreeze</string>
	<string name="maintenance_engine_mount">Mount</string>
	<string name="maintenance_engine_silencer_corrugation">Silencer corrugation</string>
	<string name="maintenance_engine_timing_chain_kit">Timing chain kit</string>
	<string name="maintenance_engine_cylinder_unit_heads">Cylinder unit heads</string>
	<string name="maintenance_engine_cylinder_unit_heads_gasket">Cylinder unit heads gasket</string>
	<string name="maintenance_engine_cylinder_head_bolts">Cylinder head bolts</string>
	<string name="maintenance_engine_cylinder">Cylinder</string>
	<string name="maintenance_engine_cylinder_shell">Cylinder shell</string>
	<string name="maintenance_engine_cylinder_unit_liner">Cylinder unit liner</string>
	<string name="maintenance_engine_cylinder_unit">Cylinder unit</string>
	<string name="maintenance_engine_belt_generator">Belt generator</string>
	<string name="maintenance_engine_belt_air_conditioner">Belt air conditioner</string>
	<string name="maintenance_engine_turbo">Turbo</string>
	<string name="maintenance_engine_intercooler">Intercooler</string>
	<string name="maintenance_engine_compressor">Compressor</string>
	<string name="maintenance_engine_belt_compressor">Belt compressor</string>
	<string name="maintenance_engine_piston_rings">Piston rings</string>
	<string name="maintenance_engine_piston">Piston</string>
	<string name="maintenance_engine_pump_fuel">Pump fuel</string>
	<string name="maintenance_engine_fuel_burner">Fuel burner</string>
	<string name="maintenance_engine_belt_pump_fuel">Belt pump fuel</string>
	<string name="maintenance_engine_pipe_fuel">Pipe fuel</string>
	<string name="maintenance_engine_radiator">Radiator</string>
	<string name="maintenance_engine_pump_water">Pump water</string>
	<string name="maintenance_engine_damper">Damper</string>
	<string name="maintenance_engine_valve">Valve</string>
	<string name="maintenance_engine_roller">Roller</string>
	<string name="maintenance_engine_connecting_rod">Connecting rod</string>
	<string name="maintenance_engine_camshaft">Camshaft</string>
	<string name="maintenance_engine_crankshaft">Crankshaft</string>
	<string name="maintenance_transmission_speed_sensor">Speed sensor</string>
	<string name="maintenance_transmission_clutch_kit">Clutch kit (disk, basket)</string>
	<string name="btm_sheet_vehicle_add_enter_vin_hint">VIN code</string>
	<string name="btm_sheet_vehicle_add_enter_vin_helper">Autocomplete vehicle info</string>
	<string name="btm_sheet_vehicle_add_enter_brand_hint">Vehicle brand</string>
	<string name="btm_sheet_vehicle_add_enter_model_hint">Vehicle model</string>
	<string name="btm_sheet_vehicle_add_enter_year_hint">Year produced</string>
	<string name="btm_sheet_vehicle_add_enter_engine_cap_hint">Engine capacity</string>
	<string name="about_year" translatable="false">2020</string>
	<string name="about_email_address" translatable="false">andrii.muramrr@gmail.com</string>
	<string name="about_email_me">Any questions or proposals?</string>
	<string name="about_privacy_policy">Privacy policy</string>
	<string name="about_terms_of_service">Terms of service</string>
</resources>